[tool.poetry]
name = "automate-backups-to-s3"
version = "0.1.0"
description = ""
authors = ["Cristian Alvarez H <alvarezhernandezcristian1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto = "^2.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
